# portfolio

./: .gitignore  CLAUDE.md  FETCH_PRICES_ENHANCEMENTS.md  README.md  pyproject.toml  test_fetch_nsepy_price_unit.py  test_fetch_prices.py  test_fetch_prices_unit.py  test_prices_diagnostic.py
.playwright-mcp/: equity_master.json  nifty250_symbols.json  page-2026-05-02T04-56-19-256Z.yml  page-2026-05-02T04-56-47-040Z.yml  page-2026-05-02T04-58-24-297Z.yml  page-2026-05-02T04-58-48-603Z.yml  page-2026-05-02T04-58-57-214Z.yml  page-2026-05-02T04-59-11-433Z.yml  page-2026-05-02T04-59-24-751Z.yml
data/: performance.csv  universe.csv
data/backtest/: backtest_20260519_1mo.csv  backtest_20260519_1mo_monthly.csv  backtest_20260519_1mo_tax.csv  backtest_20260519_1mo_trades.csv  backtest_20260521_120mo.csv  backtest_20260521_120mo_monthly.csv  backtest_20260521_120mo_tax.csv  backtest_20260521_120mo_trades.csv
data/market/: benchmark.csv  missing_fundamentals_log.csv
data/portfolio/: performance.csv  portfolio.json
data/universe/: universe.csv
scripts/: backtest.py  compute_metrics.py  fetch_benchmark.py  fetch_fundamentals.py  fetch_nselib_prices.py  fetch_nsepy_price.py  fetch_prices.py  fetch_universe.py  portfolio_types.py  update_portfolio.py  validate_data.py
scripts/backtest/: backtest.py
scripts/fetch/: fetch_benchmark.py  fetch_fundamentals.py  fetch_nsepy_price.py  (+1 more)
tests/: test_backtest_pe_fundamentals.py  test_compute_metrics_momentum.py  test_fetch_benchmark.py  test_fetch_fundamentals_unit.py  test_fetch_nsepy_price_unit.py  test_validate_data.py
(+1057 files in other folders)
