[project]
name = "nifty-agent"
version = "0.1.0"
description = "AI-driven Indian equity paper portfolio — weekly Claude Code sessions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance==0.2.54",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "tabulate>=0.9",
    "python-dateutil>=2.9",
]

[tool.uv]
dev-dependencies = []
