[project]
name = "nifty-agent"
version = "0.1.0"
description = "AI-driven Indian equity paper portfolio — weekly Claude Code sessions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance==0.2.54",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "tabulate>=0.9",
    "python-dateutil>=2.9",
    "playwright>=1.40",
    "nselib>=2.5.1",
    "jugaad-data>=0.33.1",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "ruff>=0.4",
    "pandas-stubs>=2.2",
    "types-requests>=2.31",
    "types-tabulate>=0.9",
]

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true   # yfinance has no type stubs

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line-length enforced by formatter, not linter
